--- a/resource/assets/sass/components/_content.scss
+++ b/resource/assets/sass/components/_content.scss
@@ -7,17 +7,15 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	padding: 10px;	
-	overflow: hidden;
+	padding: 10px;
 }
 
 .each__content {
 	width: 100%;
-	min-height: calc(100vh - 150px);
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	overflow: auto;
 	padding-right: 0px;
 
 	&:nth-child(even) {
