--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -746,10 +746,12 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  overflow-x: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased; }
 
 body {
-  background: url("../img/bgsStarLagrge.png");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed; }
@@ -884,7 +886,15 @@ footer span {
 /****** mobile menu ******/
 .main__sidebar + .main__content {
   margin-left: 18em;
-  margin-top: 150px; }
+  margin-top: 100px; }
+  @media screen and (max-width: 768px) {
+    .main__sidebar + .main__content {
+      margin-left: 0;
+      margin-top: 75px; } }
+
+@media screen and (max-width: 768px) {
+  .main__sidebar {
+    display: none; } }
 
 /* burger menu button */
 .burger__menu {
@@ -1079,24 +1089,28 @@ footer span {
   border: 0;
   color: rgba(139, 139, 139, 0.35);
   display: block;
-  font-size: 0.8em;
+  font-size: 0.6em;
   font-weight: bold;
   letter-spacing: 0.25em;
   line-height: 1.75;
   outline: 0;
   padding: 1.35em 0;
   position: relative;
-  text-decoration: none; }
+  text-decoration: none;
+  text-transform: uppercase; }
 
 #sidebar a.active {
-  color: #49C5FE; }
+  color: #8b8b8b; }
 
 /* ============================ HEADER ========================================== */
 header {
   width: 100%;
-  height: 150px;
+  height: 99px;
   position: fixed;
-  z-index: 2; }
+  z-index: 12; }
+  @media screen and (max-width: 768px) {
+    header {
+      height: 75px; } }
 
 .header__content {
   height: 100%;
@@ -1109,7 +1123,12 @@ header {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
-          flex-direction: row; }
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0px 4px 39px -6px rgba(0, 0, 0, 0.22);
+          box-shadow: 0px 4px 39px -6px rgba(0, 0, 0, 0.22); }
 
 .header {
   -webkit-box-flex: 2;
@@ -1124,9 +1143,7 @@ header {
   display: none; }
 
 .header__logo {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  width: 397px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1138,6 +1155,9 @@ header {
           align-items: flex-end; }
   .header__logo img {
     height: 50px; }
+  @media screen and (max-width: 768px) {
+    .header__logo {
+      width: 114px; } }
 
 .landing__page {
   width: 100%;
@@ -1155,5 +1175,146 @@ header {
           align-items: center; }
   .landing__page div {
     padding: 0 0 70px 0; }
+
+#content-1 {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start; }
+  #content-1 .inner .tittle-h1 {
+    color: #49C5FE;
+    font-size: 1.9em;
+    font-weight: bold;
+    margin: 20px 0 10px; }
+  #content-1 .inner .body-p {
+    color: #000;
+    font-size: 0.9em; }
+  #content-1 .inner .bxvideo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start; }
+    @media screen and (max-width: 768px) {
+      #content-1 .inner .bxvideo {
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column; } }
+    #content-1 .inner .bxvideo .invideo {
+      width: 46%; }
+      @media screen and (max-width: 768px) {
+        #content-1 .inner .bxvideo .invideo {
+          width: 100%; } }
+      #content-1 .inner .bxvideo .invideo:nth-child(2) {
+        margin-left: 4%; }
+        @media screen and (max-width: 768px) {
+          #content-1 .inner .bxvideo .invideo:nth-child(2) {
+            margin-left: 0; } }
+      #content-1 .inner .bxvideo .invideo .video-wrapper {
+        margin: 5% auto;
+        position: relative; }
+        #content-1 .inner .bxvideo .invideo .video-wrapper .video-player {
+          position: relative;
+          padding-top: 56.4%; }
+        #content-1 .inner .bxvideo .invideo .video-wrapper iframe {
+          position: absolute;
+          top: -90000px;
+          left: 0;
+          height: 100% !important;
+          width: 100% !important;
+          opacity: 0;
+          -webkit-transition: top .05s, opacity .45s;
+          transition: top .05s, opacity .45s; }
+          #content-1 .inner .bxvideo .invideo .video-wrapper iframe.watch {
+            top: 0;
+            opacity: 1; }
+        #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger,
+        #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100% !important;
+          width: 100% !important;
+          background-repeat: no-repeat;
+          background-size: cover;
+          z-index: 10;
+          -webkit-transition: visibility .33s, opacity .33s;
+          transition: visibility .33s, opacity .33s;
+          cursor: pointer !important; }
+          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger.removed,
+          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2.removed {
+            opacity: 0;
+            visibility: hidden; }
+          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger:after,
+          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2:after {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.3);
+            -webkit-transition: 0.33s;
+            transition: 0.33s; }
+          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger .text,
+          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 .text {
+            -webkit-transition: all 0.2s linear;
+            transition: all 0.2s linear;
+            -webkit-transform: translateY(-50%);
+                -ms-transform: translateY(-50%);
+                    transform: translateY(-50%);
+            position: relative;
+            width: auto;
+            min-width: 300px;
+            top: 50%;
+            margin: 0 auto;
+            color: white;
+            text-align: center;
+            z-index: 1; }
+            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger .text .big,
+            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 .text .big {
+              text-transform: uppercase;
+              font-size: 50px;
+              font-weight: bold;
+              margin: 0; }
+            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger .text h2,
+            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 .text h2 {
+              font-weight: normal;
+              font-size: 30px;
+              margin: 0; }
+            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger .text .play,
+            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 .text .play {
+              position: relative;
+              margin-top: 5px;
+              font-size: 1.4em; }
+            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger .text:hover,
+            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 .text:hover {
+              opacity: 0.7; }
+          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger a#play-video,
+          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 a#play-video {
+            display: block;
+            width: 100%;
+            height: 100%;
+            text-decoration: none;
+            color: white; }
+      #content-1 .inner .bxvideo .invideo .videotitle {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        margin-bottom: 20px; }
+        #content-1 .inner .bxvideo .invideo .videotitle h3 {
+          font-size: 1.2em;
+          margin: 0 0 10px 0;
+          color: #000; }
+        #content-1 .inner .bxvideo .invideo .videotitle .sub-tittle {
+          font-size: 0.8em; }
 
 /*# sourceMappingURL=app.css.map */
