--- a/resource/assets/sass/components/_header.scss
+++ b/resource/assets/sass/components/_header.scss
@@ -1,9 +1,15 @@
 /* ============================ HEADER ========================================== */
 header {
 	width: 100%;
-	height: 150px;
+	height: 99px;
 	position: fixed;
-	z-index: 2;
+	z-index: 12;
+
+	//RESPONSIVE FOR TABLET
+	@include bp (max, 768px) {
+		height: 75px;
+	}
+
 }
 
 .header__content {
@@ -12,7 +18,9 @@ header {
 	transition: all 0.6s;
 	display: flex;
 	flex-direction: row;
-	// border-bottom: 1px solid rgba(139,139,139,0.25);
+	// border-bottom: 1px solid rgba(139, 139, 139, 0.25);
+	align-items:center;
+	box-shadow: 0px 4px 39px -6px rgba(0, 0, 0, 0.22);
 }
 
 .header {
@@ -26,12 +34,17 @@ header {
 }
 
 .header__logo {
-	flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+	width: 397px;
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-end;
 
 	img {
 		height: 50px;
 	}
+
+	@include bp (max, 768px) {
+		width: 114px;
+	}
+
 }
