--- a/resource/assets/sass/components/_layout.scss
+++ b/resource/assets/sass/components/_layout.scss
@@ -4,11 +4,13 @@ body {
 	width: 100%;
 	margin: 0;
 	padding: 0;
-	// overflow-x: hidden;
+	overflow-x: hidden;
+	-moz-osx-font-smoothing: grayscale;
+   -webkit-font-smoothing: antialiased;
 }
 
 body {
-	background: url('../img/bgsStarLagrge.png');
+	// background: url('../img/bgsStarLagrge.png');
 	background-size: cover;
 	background-position: center center;
 	background-attachment: fixed;
@@ -149,7 +151,20 @@ footer span {
 /****** mobile menu ******/
 .main__sidebar + .main__content {
 	margin-left: 18em;
-	margin-top: 150px;
+	margin-top: 100px;
+
+	//RESPONSIVE FOR TABLET
+    @include bp (max, 768px) {
+       margin-left: 0;
+       margin-top: 75px;
+    }
+}
+
+.main__sidebar{
+	//RESPONSIVE FOR TABLET
+    @include bp (max, 768px) {
+       display:none;
+    }
 }
 
 /* burger menu button */
