content 2 and 3  + responsive

--- a/resource/assets/sass/helpers/_variable.scss
+++ b/resource/assets/sass/helpers/_variable.scss
@@ -80,3 +80,14 @@ $chevron-right: "&#x3009;";
 $close: "&#x2715;";
 $quote-left: "\201c";
 $quote-right: "\201d";
+
+
+//RESPONSIVE
+$screen-m-s: 320px;
+$screen-m-m: 375px;
+$screen-m-l: 425px;
+$screen-tablet: 768px;
+$screen-m: 1024px;
+$screen-l: 1366px;
+$screen-xl: 1440px;
+$screen-xll: 1920px;
