--- a/resource/assets/sass/components/_content.scss
+++ b/resource/assets/sass/components/_content.scss
@@ -1,5 +1,4 @@
 #mainContent {
-
 }
 
 .main__content {
@@ -16,10 +15,425 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding-right: 0px;
-
-	&:nth-child(even) {
-    	background-color: #ddd;
-    }
+	padding-right: 0px;	/* // &:nth-child(even) {
+						 //    	background-color: #ddd;
+						 //    } */
 }
 
+//GENERAL
+
+.tittle-h1 {
+	color: #49C5FE;
+	font-size: 1.9em;
+	font-weight: bold;
+	margin: 20px 0 10px;
+}
+
+.body-p {
+	color: #000;
+	font-size: 0.9em;
+
+	@include bp (min, $screen-xll) {
+		font-size: 1em;
+	}
+
+}
+
+//===========================  CONTENT-1 =======================
+
+#content-1 {
+	// justify-content: flex-start;
+
+	.inner {
+		.bxvideo {
+			display: flex;
+			justify-content: flex-start;
+
+			//RESPONSIVE FOR TABLET
+			@include bp (max, 768px) {
+				flex-wrap: wrap;
+				flex-direction: column;
+			}
+
+			.invideo {
+				width: 46%;
+
+				//RESPONSIVE FOR TABLET
+				@include bp (max, 768px) {
+					width: 100%;
+				}
+
+				&:nth-child(2) {
+					margin-left: 4%;
+
+					//RESPONSIVE FOR TABLET
+					@include bp (max, 768px) {
+						margin-left: 0;
+					}
+
+				}
+
+				//colors
+				$color_black_approx: #010000;
+				$white: white;
+
+				.video-wrapper {
+					margin: 5% auto;
+					position: relative;
+
+					.video-player {
+						position: relative;
+						padding-top: 56.4%;
+					}
+
+					iframe {
+						position: absolute;
+						top: -90000px;
+						left: 0;
+						height: 100% !important;
+						width: 100% !important;
+						opacity: 0;
+						transition: top .05s, opacity .45s;
+
+						&.watch {
+							top: 0;
+							opacity: 1;
+						}
+
+					}
+
+					.video-trigger,
+					.video-trigger2 {
+						position: absolute;
+						top: 0;
+						left: 0;
+						height: 100% !important;
+						width: 100% !important;
+						background-repeat: no-repeat;
+						background-size: cover;
+						z-index: 10;
+						transition: visibility .33s, opacity .33s;
+						cursor: pointer !important;
+
+						&.removed {
+							opacity: 0;
+							visibility: hidden;
+						}
+
+						&:after {
+							content: "";
+							display: block;
+							position: absolute;
+							top: 0;
+							left: 0;
+							width: 100%;
+							height: 100%;
+							background-color: rgba(0, 0, 0, 0.3);
+							transition: 0.33s;
+						}
+
+						.text {
+							transition: all 0.2s linear;
+							transform: translateY(-50%);
+							position: relative;
+							width: auto;
+							min-width: 300px;
+							top: 50%;
+							margin: 0 auto;
+							color: white;
+							text-align: center;
+							z-index: 1;
+
+							.big {
+								text-transform: uppercase;
+								font-size: 50px;
+								font-weight: bold;
+								margin: 0;
+							}
+
+							h2 {
+								font-weight: normal;
+								font-size: 30px;
+								margin: 0;
+							}
+
+							.play {
+								position: relative;
+								margin-top: 5px;
+								font-size: 1.4em;
+							}
+
+							&:hover {
+								opacity: 0.7;
+							}
+
+						}
+
+						a#play-video {
+							display: block;
+							width: 100%;
+							height: 100%;
+							text-decoration: none;
+							color: white;
+						}
+
+					}
+
+				}
+
+				.videotitle {
+					display: flex;
+					flex-direction: column;
+					margin-bottom: 20px;
+
+					h3 {
+						font-size: 1.2em;
+						margin: 0 0 10px 0;
+						color: #000;
+					}
+
+					.sub-tittle {
+						font-size: 0.8em;
+					}
+
+				}
+
+			}
+
+		}
+
+	}
+
+}
+
+//===========================  CONTENT-2 =======================
+
+#content-2 {
+	// justify-content: flex-start;
+
+	.inner {
+		display: flex;
+		flex-direction: column;
+
+		.inner-1 {
+			margin-bottom: 50px;
+
+			.boxcolumn {
+				display: flex;
+				justify-content: space-between;
+				margin-top: 30px;
+
+				@include bp (max, 768px) {
+					flex-wrap: wrap;
+					justify-content: center;
+				}
+
+				.text-tittle {
+					font-size: 0.8em;
+					color: #000;
+					margin: 5px 0 15px;
+				}
+
+				.body-p {
+					text-align: center;
+				}
+
+				.column1,
+				.column2,
+				.column3 {
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					width: 25%;
+					margin: 20px;
+
+					@include bp (min, $screen-xll) {
+						width: 30%;
+						padding: 20px;
+						font-size: 1em;
+						text-align: center;
+					}
+
+					@include bp (max, 768px) {
+						width: 40%;
+						padding: 10px;
+						font-size: 0.9em;
+						text-align: center;
+					}
+
+					@include bp (max, 425px) {
+						width: 100%;
+					}
+
+					.circlebx {
+						background-color: #49C5FE;
+						width: 50px;
+						height: 50px;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						border-radius: 100%;
+
+						@include bp (min, $screen-xll) {
+							width: 70px;
+							height: 70px;
+						}
+
+						img {
+							width: 65%;
+
+							@include bp (min, $screen-xll) {
+								width: 70%;
+							}
+
+						}
+
+					}
+
+					.minbox {
+						img {
+							width: 50%;
+							margin-left: 5px;
+							margin-bottom: 2px;
+
+							@include bp (min, $screen-xll) {
+								width: 55%;
+							}
+
+						}
+
+					}
+
+				}
+
+			}
+
+		}
+
+		.inner-2 {
+			width: 100%;
+			display: flex;
+			justify-content: space-around;
+
+			@include bp (max, 425px) {
+				flex-wrap: wrap;
+				justify-content: center;
+			}
+
+			img {
+				width: 100%;
+			}
+
+			.column1,
+			.column2 {
+				width: 45%;
+
+				@include bp (max, 425px) {
+					width: 100%;
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					margin-bottom: 40px;
+				}
+
+				.quotes1 {
+					display: flex;
+					background-color: rgba(221, 221, 221, 0.2);
+					border-radius: 3px;
+
+					.quotepic {
+						width: 70px;
+						height: 70px;
+						opacity: 0.2;
+						z-index: 2;
+						margin: 10px 0 0 10px;
+					}
+
+					p {
+						color: #000;
+						margin: 15px 0 15px -8px;
+						font-size: 0.9em;
+						padding: 10px;
+
+						@include bp (min, $screen-xll) {
+							padding: 30px;
+						}
+
+						@include bp (max, 425px) {
+							font-size: 0.8em;
+						}
+
+					}
+
+				}
+
+				.boxpic {
+					display: flex;
+					margin: 10px 0 0 10px;
+
+					.pic {
+						width: 40px;
+						height: 40px;
+						border-radius: 100%;
+						overflow: hidden;
+					}
+
+					.bxjob {
+						margin-left: 20px;
+						display: flex;
+						flex-direction: column;
+
+						.namepic {
+							color: #000;
+						}
+
+						.jobpic {
+							font-size: 0.8em;
+						}
+
+					}
+
+				}
+
+			}
+
+		}
+
+	}
+
+}
+
+//===========================  CONTENT-3=======================
+
+#content-3{
+	.bxcolumn4{
+		display:flex;
+		flex-direction: roe;
+		
+		flex-wrap: wrap;
+		justify-content: space-between;
+
+		.column1, 
+		.column2, 
+		.column3, 
+		.column4{
+			width:45%;
+			margin-top:3em;
+			@include bp (max, 425px) {
+				width: 99%;
+			}
+
+			.tittle-h4{
+				font-size: 1em;
+				color: #000;
+				margin-bottom: 10px;
+			}
+
+			p{
+				font-size: 0.9em;
+			}
+
+		} 
+	}
+}
