--- a/resource/assets/sass/components/_header.scss
+++ b/resource/assets/sass/components/_header.scss
@@ -1,7 +1,7 @@
 /* ============================ HEADER ========================================== */
 header {
 	width: 100%;
-	height: 99px;
+	height: 130px;
 	position: fixed;
 	z-index: 12;
 
@@ -19,8 +19,14 @@ header {
 	display: flex;
 	flex-direction: row;
 	// border-bottom: 1px solid rgba(139, 139, 139, 0.25);
-	align-items:center;
+	// align-items: center;
 	box-shadow: 0px 4px 39px -6px rgba(0, 0, 0, 0.22);
+
+	//RESPONSIVE TABLET & MODAL
+	@include bp (max, 768px) {
+		align-items: center;
+	}
+
 }
 
 .header {
