--- a/resource/assets/sass/components/_sidebar.scss
+++ b/resource/assets/sass/components/_sidebar.scss
@@ -1,5 +1,13 @@
 .main__sidebar {
-    width: 18em;
+
+	background-color: $white;
+	cursor: default;
+	height: 100vh;
+	left: 0;
+	overflow-x: hidden;
+	overflow-y: auto;
+	position: fixed;
+	width: 18em;
 	background-color: transparent;
     height: 100vh;
     left: 0;
@@ -10,14 +18,16 @@
     display: flex;
     justify-content: center;
 
+
 	ul {
 		width: 25%;
 		display: flex;
-	    flex-direction: column;
-	    justify-content: center;
-	    align-items: center;
-	    height: 100%;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
 	}
+
 }
 
 .main__sidebar ul li {
@@ -65,6 +75,7 @@
 	position: relative;
 	text-decoration: none;
 }
+
 #sidebar a.active {
 	color: $secondary;
 }
