--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -877,7 +877,7 @@ a:hover {
 /****** mobile menu ******/
 .main__sidebar + .main__content {
   margin-left: 18em;
-  margin-top: 130px; }
+  margin-top: 50px; }
   @media screen and (max-width: 768px) {
     .main__sidebar + .main__content {
       margin-left: 0;
@@ -1654,15 +1654,11 @@ a:hover {
 #sidebar a.active {
   color: #49C5FE; }
 
-/* ============================ HEADER ========================================== */
 header {
   width: 100%;
-  height: 130px;
+  height: 80px;
   position: fixed;
   z-index: 12; }
-  @media screen and (max-width: 768px) {
-    header {
-      height: 75px; } }
 
 .header__content {
   height: 100%;
@@ -1676,6 +1672,9 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-shadow: 0px 4px 39px -6px rgba(0, 0, 0, 0.22);
           box-shadow: 0px 4px 39px -6px rgba(0, 0, 0, 0.22); }
   @media screen and (max-width: 768px) {
@@ -1782,7 +1781,8 @@ footer {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
-          flex-direction: column; }
+          flex-direction: column;
+  background-color: #3F4E7B; }
   .socmed__contact ul {
     width: 20%;
     display: -webkit-box;
@@ -1791,5 +1791,10 @@ footer {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between; }
+
+footer span {
+  padding: 10px 5px 0;
+  font-size: 0.7em;
+  font-weight: 300; }
 
 /*# sourceMappingURL=app.css.map */
