--- a/resource/assets/sass/components/_header.scss
+++ b/resource/assets/sass/components/_header.scss
@@ -1,14 +1,8 @@
-/* ============================ HEADER ========================================== */
 header {
 	width: 100%;
-	height: 130px;
+	height: 80px;
 	position: fixed;
 	z-index: 12;
-
-	//RESPONSIVE FOR TABLET
-	@include bp (max, 768px) {
-		height: 75px;
-	}
 
 }
 
@@ -19,7 +13,7 @@ header {
 	display: flex;
 	flex-direction: row;
 	// border-bottom: 1px solid rgba(139, 139, 139, 0.25);
-	// align-items: center;
+	align-items: center;
 	box-shadow: 0px 4px 39px -6px rgba(0, 0, 0, 0.22);
 
 	//RESPONSIVE TABLET & MODAL
