--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -624,7 +624,7 @@ button.weekly_schedule {
 
 /* MODAL MENU */
 .main__nav {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: white;
   position: absolute;
   left: 0;
   top: 0;
@@ -689,7 +689,9 @@ button.weekly_schedule {
 .main__nav a {
   color: #8b8b8b;
   display: inline-block;
-  font-size: 1.2em; }
+  font-size: 1.2em;
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease; }
   .main__nav a:hover {
     color: #49C5FE; }
 
@@ -1413,147 +1415,6 @@ a:hover {
     #content-3 .bxcolumn4 .column4 p {
       font-size: 0.9em; }
 
-#content-1 {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start; }
-  #content-1 .inner .tittle-h1 {
-    color: #49C5FE;
-    font-size: 1.9em;
-    font-weight: bold;
-    margin: 20px 0 10px; }
-  #content-1 .inner .body-p {
-    color: #000;
-    font-size: 0.9em; }
-  #content-1 .inner .bxvideo {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start; }
-    @media screen and (max-width: 768px) {
-      #content-1 .inner .bxvideo {
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column; } }
-    #content-1 .inner .bxvideo .invideo {
-      width: 46%; }
-      @media screen and (max-width: 768px) {
-        #content-1 .inner .bxvideo .invideo {
-          width: 100%; } }
-      #content-1 .inner .bxvideo .invideo:nth-child(2) {
-        margin-left: 4%; }
-        @media screen and (max-width: 768px) {
-          #content-1 .inner .bxvideo .invideo:nth-child(2) {
-            margin-left: 0; } }
-      #content-1 .inner .bxvideo .invideo .video-wrapper {
-        margin: 5% auto;
-        position: relative; }
-        #content-1 .inner .bxvideo .invideo .video-wrapper .video-player {
-          position: relative;
-          padding-top: 56.4%; }
-        #content-1 .inner .bxvideo .invideo .video-wrapper iframe {
-          position: absolute;
-          top: -90000px;
-          left: 0;
-          height: 100% !important;
-          width: 100% !important;
-          opacity: 0;
-          -webkit-transition: top .05s, opacity .45s;
-          transition: top .05s, opacity .45s; }
-          #content-1 .inner .bxvideo .invideo .video-wrapper iframe.watch {
-            top: 0;
-            opacity: 1; }
-        #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger,
-        #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 {
-          position: absolute;
-          top: 0;
-          left: 0;
-          height: 100% !important;
-          width: 100% !important;
-          background-repeat: no-repeat;
-          background-size: cover;
-          z-index: 10;
-          -webkit-transition: visibility .33s, opacity .33s;
-          transition: visibility .33s, opacity .33s;
-          cursor: pointer !important; }
-          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger.removed,
-          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2.removed {
-            opacity: 0;
-            visibility: hidden; }
-          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger:after,
-          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2:after {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.3);
-            -webkit-transition: 0.33s;
-            transition: 0.33s; }
-          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger .text,
-          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 .text {
-            -webkit-transition: all 0.2s linear;
-            transition: all 0.2s linear;
-            -webkit-transform: translateY(-50%);
-                -ms-transform: translateY(-50%);
-                    transform: translateY(-50%);
-            position: relative;
-            width: auto;
-            min-width: 300px;
-            top: 50%;
-            margin: 0 auto;
-            color: white;
-            text-align: center;
-            z-index: 1; }
-            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger .text .big,
-            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 .text .big {
-              text-transform: uppercase;
-              font-size: 50px;
-              font-weight: bold;
-              margin: 0; }
-            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger .text h2,
-            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 .text h2 {
-              font-weight: normal;
-              font-size: 30px;
-              margin: 0; }
-            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger .text .play,
-            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 .text .play {
-              position: relative;
-              margin-top: 5px;
-              font-size: 1.4em; }
-            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger .text:hover,
-            #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 .text:hover {
-              opacity: 0.7; }
-          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger a#play-video,
-          #content-1 .inner .bxvideo .invideo .video-wrapper .video-trigger2 a#play-video {
-            display: block;
-            width: 100%;
-            height: 100%;
-            text-decoration: none;
-            color: white; }
-      #content-1 .inner .bxvideo .invideo .videotitle {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        margin-bottom: 20px; }
-        #content-1 .inner .bxvideo .invideo .videotitle h3 {
-          font-size: 1.2em;
-          margin: 0 0 10px 0;
-          color: #000; }
-        #content-1 .inner .bxvideo .invideo .videotitle .sub-tittle {
-          font-size: 0.8em; }
-
 .main__sidebar {
   background-color: #fff;
   cursor: default;
@@ -1770,5 +1631,10 @@ footer {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between; }
+    .socmed__contact ul li svg {
+      -webkit-transition: 0.2s ease;
+      transition: 0.2s ease; }
+    .socmed__contact ul li svg:hover {
+      fill: #fff; }
 
 /*# sourceMappingURL=app.css.map */
