--- a/resource/assets/sass/components/_sidebar.scss
+++ b/resource/assets/sass/components/_sidebar.scss
@@ -1,5 +1,4 @@
 .main__sidebar {
-
 	background-color: $white;
 	cursor: default;
 	height: 100vh;
@@ -26,36 +25,20 @@
 		justify-content: center;
 		align-items: center;
 		height: 100%;
+
+		li {
+			width: 100%;
+			padding: 5px;
+			font-size: 1em;
+			font-weight: 300;
+			cursor: pointer;
+			transition: all 0.25s ease-in-out;
+			display: flex;
+			align-items: center;
+			text-align: left;
+			overflow: hidden;
+		}
 	}
-
-}
-
-.main__sidebar ul li {
-	width: 100%;
-	padding: 5px;
-	font-size: 1em;
-	font-weight: 300;
-	cursor: pointer;
-	transition: all 0.25s ease-in-out;
-	display: flex;
-	align-items: center;
-	text-align: left;
-
-	svg {
-		position: relative;
-		right: 20px;
-		// border: 1px solid red;
-	}
-
-	span {
-		margin-top: -5px;
-		margin-left: -10px;
-	}
-
-}
-
-.main__sidebar ul li:hover {
-	// background-color: #303e62;
 }
 
 #sidebar a {
@@ -68,14 +51,33 @@
 	display: block;
 	font-size: 1em;
 	font-weight: bold;
-	letter-spacing: 0.25em;
 	line-height: 1.75;
 	outline: 0;
 	padding: .35em 0;
 	position: relative;
 	text-decoration: none;
+
+	&:hover {
+		color: $secondary;
+	}
+
+	&:after {
+	    content:"";
+	    display: inline-block;
+	    height: 0.75em;
+	    vertical-align: bottom;
+	    width:0;
+	    margin-right: -100%;
+	    margin-left: 10px;
+	    border-top: 1px solid $secondary;
+	    transition: width 0.6s;
+	}
 }
 
 #sidebar a.active {
 	color: $secondary;
+
+	&:after {
+	    width: 100%;
+	}
 }
