--- a/resource/assets/sass/components/_footer.scss
+++ b/resource/assets/sass/components/_footer.scss
@@ -1,4 +1,5 @@
 footer {
+	position: relative;
 	background-color: $primary;
 	padding: 20px 75px;
 }
@@ -45,12 +46,14 @@ footer {
 
 		li {
 			
-			svg {
+			i {
+				font-size: 1.5em;
+				cursor: pointer;
 				transition: 0.2s ease;
 			}
 
-			svg:hover {
-				fill: $white
+			i:hover {
+				color: $white
 			}
 		}
 
